feat: some polish & default info

--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="MANA Network data" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -24,12 +22,75 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+  <title>MANA Network</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root">
+    <div class="container">
+      <div class="dcl navbar fullscreen" role="navigation">
+        <div class="ui container">
+          <div class="dcl navbar-menu">
+            <div class="dcl navbar-mobile-menu"><a class="dcl navbar-logo" href="https://decentraland.org"><i
+                  class="dcl logo"></i></a>
+              <div class="ui small header dcl active-page caret-down"></div>
+            </div>
+          </div>
+          <div class="dcl navbar-account"></div>
+        </div>
+        <div class="mobile-menu"><a href="https://avatars.decentraland.org" class="item">Avatars</a><a
+            href="https://market.decentraland.org" class="item">Marketplace</a><a
+            href="https://builder.decentraland.org" class="item">Builder</a><a href="https://docs.decentraland.org"
+            class="item">Docs</a><a href="https://events.decentraland.org" class="item">Events</a><a
+            href="https://dao.decentraland.org" class="item">DAO</a><a href="https://decentraland.org/blog"
+            class="item">Blog</a></div>
+      </div>
+      <div class="dcl page fullscreen">
+        <div class="dcl center">
+          <div class="ui huge header">607,966,928</div>
+          <p>MANA was Burned out of the original 2,805,886,393 supply<div class="ui active indicating success progress"
+              data-percent="21" style="margin-top: 20px;">
+              <div class="bar" style="width: 21.67%;">
+                <div class="progress">21.67%</div>
+              </div>
+            </div>
+          </p>
+        </div>
+      </div>
+      <div class="ui container dcl footer fullscreen">
+        <div class="main-footer">
+          <div role="listbox" aria-expanded="false" class="ui upward dropdown dcl language-dropdown" tabindex="0">
+            <div class="text" role="alert" aria-live="polite" aria-atomic="true">
+              <div class="dcl language-icon-wrapper"><i class="dcl language-icon en"></i>
+                <div class="language-icon-label">English</div>
+              </div>
+            </div><i aria-hidden="true" class="dropdown icon"></i>
+            <div class="right menu transition">
+              <div role="option" aria-checked="true" aria-selected="true" class="active selected item"
+                style="pointer-events: all;">
+                <div class="dcl language-icon-wrapper"><i class="dcl language-icon en"></i>
+                  <div class="language-icon-label">English</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="links"><a href="https://decentraland.org">Home</a><a
+              href="https://decentraland.org/privacy">Privacy Policy</a><a href="https://decentraland.org/terms">Terms
+              of Use</a><a href="https://decentraland.org/content">Content Policy</a><a
+              href="https://decentraland.org/ethics">Code of Ethics</a></div>
+        </div>
+        <div class="secondary-footer">
+          <div class="social-links"><a href="https://dcl.gg/discord"><i class="social-icon discord"></i></a><a
+              href="https://reddit.com/r/decentraland"><i class="social-icon reddit"></i></a><a
+              href="https://github.com/decentraland"><i class="social-icon github"></i></a><a
+              href="https://twitter.com/decentraland"><i class="social-icon twitter"></i></a></div>
+          <div class="copyright">© 2020 Decentraland</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -39,5 +100,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
 </html>
