feat: time series

--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -47,16 +47,66 @@
             class="item">Blog</a></div>
       </div>
       <div class="dcl page fullscreen">
-        <div class="dcl center">
-          <div class="ui huge header">607,966,928</div>
-          <p>MANA was Burned out of the original 2,805,886,393 supply<div class="ui active indicating success progress"
-              data-percent="21" style="margin-top: 20px;">
-              <div class="bar" style="width: 21.67%;">
-                <div class="progress">21.67%</div>
+        <div class="dcl hero">
+          <div style="height: 200px;">&nbsp;</div>
+          <div class="dcl center">
+            <div class="ui huge header">607,967,028</div>
+            <p>MANA was Burned out of the original 2,805,886,393 supply<div
+                class="ui active indicating success progress" data-percent="21" style="margin-top: 20px;">
+                <div class="bar" style="width: 21.67%;">
+                  <div class="progress">21.67%</div>
+                </div>
+              </div>
+            </p>
+          </div>
+        </div>
+        <div class="ui container">
+          <div class="ui grid">
+            <div class="row">
+              <div class="five wide large screen sixteen wide mobile eight wide tablet column">
+                <div class="ui card">
+                  <div class="content">
+                    <div class="header">
+                      <h3>What does this mean?</h3>
+                    </div>
+                    <div class="meta">
+                      <p>MANA was initially created to be deflationary. Initially, the supply of 2,805,886,393 was
+                        burned in the Terraform event, the second auction, and the DAO creation. But there are other
+                        ways in which MANA gets burned.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="five wide large screen sixteen wide mobile eight wide tablet column">
+                <div class="ui card">
+                  <div class="content">
+                    <div class="header">
+                      <h3>How does MANA get burn?</h3>
+                    </div>
+                    <div class="meta">
+                      <p>Any activity on the marketplace charges a 2.5% fee on the sale (payed by the seller). This
+                        means that the amount of MANA burned is directly tied to the activity of the platform.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="five wide large screen sixteen wide mobile eight wide tablet column">
+                <div class="ui card">
+                  <div class="content">
+                    <div class="header">
+                      <h3>What are the consequences?</h3>
+                    </div>
+                    <div class="meta">
+                      <p>The less mana there is, the more valuable each token becomes. Any marginal demand for MANA
+                        would cause an increase in the MANA price, leading to an appreciation of the token.</p>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
-          </p>
+          </div>
         </div>
+        <div style="height: 100px;">&nbsp;</div>
       </div>
       <div class="ui container dcl footer fullscreen">
         <div class="main-footer">
